# kaggle-py-etl

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data_processed/: sales_dataset.parquet
ingestion/: kaggle.py  loader.py  models.py  pipeline.py  preprocessing.py
