[project]
name = "project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "jmelendezgeo",email = "jrmelendez.martin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb (>=1.3.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "motherduck (>=0.0.0,<0.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
